<resources>
    <string name="app_name">FIFO MATCH</string>
    <string name="position">position</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="date_people_who_understand_your_lifestyle">Date People who understand your roster</string>
    <string name="date_people_who_understand_your_lifestyle_secound">Simple way to connect with others regardless of your work roster</string>
    <string name="enter_your_mobile_nnumber">Enter your mobile \nnumber</string>
    <string name="enter_your_mobile_number_to_sign_in">Enter your mobile number to Sign In</string>
    <string name="enter_mobile_number">Phone</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign up</string>
    <string name="otp_verification">OTP verification</string>
    <string name="enter_the_4_digit_otp_sent_to">Enter the 4 digit OTP sent to:</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="no_images">noImages</string>
    <string name="newAdded">newAdded</string>
    <string name="uploaded">uploaded</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="first_name">Full name</string>
    <string name="enter_details_for_registration">Enter details for Registration</string>
    <string name="i_am_a">I am a ...</string>
    <string name="interested_in">Interested in</string>
    <string name="i_accept_all">I Accept all</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="complete_your_profile">Complete your Profile</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="steps_1_2">Steps 1/2</string>
    <string name="steps_2_2">Steps 2/2</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date">Date</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="relationship_status">Relationship status</string>
    <string name="relationship_status1">Relationship status:</string>
    <string name="enter_email_id">Email</string>
    <string name="occupation">Occupation</string>
    <string name="occupation1">Occupation:</string>
    <string name="select_occupation">Enter your occupation</string>
    <string name="select_education">Select education</string>
    <string name="select_relationship_status">Select relationship status</string>
    <string name="are_you_working_fifo_offshore_or_away_from_home">Are you working FIFO, offshore or away from home or have a complicated Roster?</string>
    <string name="write_answer">Write answer</string>
    <string name="if_yes_to_the_above_question_what_is_your_swing">If yes to the above question. What is your Swing?</string>
    <string name="write_here">Write here</string>
    <string name="preferred_age_range">Preferred Age Range</string>
    <string name="enter_discription">Enter discription</string>
    <string name="enter_bio">Enter Bio</string>
    <string name="upload_your_photos">Upload your photos</string>
    <string name="it_s_mandatory_to_upload_3_photos">It’s mandatory to upload three additional images.</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="membership">Membership</string>
    <string name="standard">Standard</string>
    <string name="for_membership">For Membership</string>
    <string name="continuee">Continue</string>
    <string name="premium_membership_benefits">Premium Membership Benefits</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_profile_is_60_completed_please_fll_survey_form_and_let_the_other_person_know_more_about_you">Your profile is 60% completed. Please fill survey form and let the other person know more about you.</string>
    <string name="fill_survey">Fill Survey</string>
    <string name="next_continue"><![CDATA[Next & Continue]]></string>
    <string name="previous">Previous</string>
    <string name="survey_15_completed">Survey 15% Completed</string>
    <string name="steps_1_7">Steps 1/7</string>
    <string name="what_is_your_height">What is your height?</string>
    <string name="cm">CM</string>
    <string name="inches">INCHES</string>
    <string name="steps_2_7">Steps 2/7</string>
    <string name="survey_30_completed">Survey 30% Completed</string>
    <string name="survey_45_completed">Survey 45% Completed</string>
    <string name="steps_3_7">Steps 3/7</string>
    <string name="do_you_have_kids">Do you have kids?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_kids_in_the_future">Do you want kids in the future?</string>
    <string name="what_are_you_seeking">What are you seeking?</string>
    <string name="survey_60_completed">Survey 60% Completed</string>
    <string name="steps_4_7">Steps 4/7</string>
    <string name="survey_75_completed">Survey 75% Completed</string>
    <string name="steps_5_7">Steps 5/7</string>
    <string name="choose_your_top_qualities">Choose your top qualities?</string>
    <string name="choose_1_to_4_given_qualities_that_best_describe_you">Choose 1 to 4 given qualities that best describe you</string>
    <string name="steps_6_7">Steps 6/7</string>
    <string name="survey_90_completed">Survey 90% Completed</string>
    <string name="choose_qualities_that_you_most_appreciate">Choose qualities that you most appreciate?</string>
    <string name="choose_4_out_of_8_given_qualities_that_you_most_appreciate_in_other_person">Choose 4 out of 8 given qualities that you most appreciate in other person.</string>
    <string name="survey_100_completed">Survey 100% Completed</string>
    <string name="steps_7_7">Steps 7/7</string>
    <string name="extrovert">Extrovert</string>
    <string name="introvert">Introvert</string>
    <string name="survey">Survey</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="everyone">Transgender</string>
    <string name="women">Woman</string>
    <string name="men">Man</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="distance_range">Distance Range</string>
    <string name="advanced_filters">Advanced Filters</string>
    <string name="height">Height</string>
    <string name="height1">Height:</string>
    <string name="body_type">Body Type</string>
    <string name="body_type1">Body Type:</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="language_preferred">Language Preferred</string>
    <string name="select_language">Select language</string>
    <string name="_18_70">18-70+</string>
    <string name="away_from_home">Away from home</string>
    <string name="swing">Swing</string>
    <string name="text_digit">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="fifo">FIFO</string>
    <string name="fifo1">FIFO:</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="about_me">About Me</string>
    <string name="lorem_demo">Lorem Ipsum is simply dummy text of the printing and typesetting industry. dummy content is more than...</string>
    <string name="lorem_demoxxx">Lorem Ipsum is simply dummy text of the printing and typesetting industry. dummy content </string>
    <string name="read_more">Read more</string>
    <string name="swing_naway_from_home">Swing \nAway from home:</string>
    <string name="swing_na">Swing:</string>
    <string name="seeking">Seeking:</string>
    <string name="ethnicity">Ethnicity:</string>
    <string name="you_want_to_see_all_photos_please_join_first_our_premium_membership">You want to see all photos please join first our premium membership</string>
    <string name="premium_membership">Premium Membership</string>
    <string name="top_qualities">Top qualities</string>
    <string name="most_appreciate">Most appreciate</string>
    <string name="kids">Kids</string>
    <string name="kids_in_future">Kids in Future</string>
    <string name="personal_information">Personal Information</string>
    <string name="appearance">Appearance</string>
    <string name="visit_who_all_have_viewed_your_profile">Visit who all have viewed your profile</string>
    <string name="settings">Settings</string>
    <string name="remove_account">Remove Account</string>
    <string name="hidden_profiles">Hidden Profiles</string>
    <string name="logout">Logout</string>
    <string name="saved">Saved</string>
    <string name="notifications">Notifications</string>
    <string name="clear_all">Clear All</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="messages">Message</string>
    <string name="match">Match</string>
    <string name="go_to_home">Go to Home</string>
    <string name="say_hello">Say Hello!</string>
    <string name="start_a_conversation_now_with_each_other">Start a conversation now with each other</string>
    <string name="profile_show_hide">Profile Show/Hide</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="online_status">Online Status</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="activate_membership">Activate Membership</string>
    <string name="renew_membership">Renew Membership</string>
    <string name="upgrade_from_premium_membership">Upgrade from Premium Membership</string>
    <string name="upgrade_from__membership">Upgrade from Standard Membership</string>
    <string name="upgrade_membership">Upgrade Membership</string>
    <string name="standard_membership">Standard Membership</string>
    <string name="what_is_your_body_type">What is your body type?</string>
    <string name="delete">Delete</string>
    <string name="archived">Archived</string>
    <string name="days">Days</string>
    <string name="_50_completed">50% Completed</string>
    <string name="_60_completed">60% Completed</string>
    <string name="yes_but_not_in_the_near_future">Yes, but not in the near future</string>
    <string name="which_of_these_two_personality_types_are_you_more_like">Which of these two personality types are you more like?</string>
    <string name="favourites_saved">Favourites/ Saved</string>
    <string name="language_preferred1">Language Preferred:</string>
    <string name="hair_colour">Hair Colour:</string>
    <string name="phone_number_valid">Mobile number is not valid</string>
    <string name="enter_phone_number">Please enter mobile number</string>
    <string name="enter_name">Please enter Name</string>
    <string name="enter_top">Please enter Otp</string>
    <string name="select_gender">Please select gender</string>
    <string name="select_Inter">Please select Interest</string>
    <string name="checkbox">You must accept our terms and condition</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
    <string name="eduction">Education</string>
    <string name="enter_Emal_id">Please Enter Email id</string>
    <string name="enter_validEmal_id">Please Enter valid Email id</string>
    <string name="enter_Date_Of_Birth">Please Enter Date Of Birth</string>
    <string name="enter_relaction_status">Please Enter Relationship Status</string>
    <string name="enter_occoucton_status">Please Enter Occupation</string>
</resources>