<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.fifo.match.ui.activity.view.fragment.InfoFragment">

        <LinearLayout
            android:id="@+id/llOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/occupation1"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/fifo1"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFIFO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/body_type1"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBodyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/seeking"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSeeking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/relationship_status1"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRelaship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_55sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/llOne"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/eduction"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tveducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/swing_na"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSwing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/height1"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/ethnicity"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
