<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_logout"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/ivv"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/ic_splash_logo"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:text="@string/are_you_sure_you_want_to_logout"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                style="@style/BUTTON"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
              />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/BUTTON"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
               android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/no"
                android:textColor="@color/white"
                />

        </LinearLayout>


</layout>
